# dmenu

./: .gitignore  CMakeLists.txt  config.def.h  config.h  dmenu.c  dmenu_run  get_offical_update.sh
mydiff/: fuzzy.diff
